# IBM_HR_Analytics

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
dbt/: README.md  dbt_project.yml
dbt/models/: schema.yml
dbt/models/marts/: fct_employee_attrition.sql  kpi_attrition_by_role.sql
dbt/models/staging/: stg_hr_employee.sql
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  aws_deployment.md
sql/: kpi_attrition_rate.sql
src/hr_analytics/: db.py  etl.py  features.py  settings.py  train.py  validation.py
tests/: test_training_smoke.py  test_validation.py
