[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-analytics"
version = "0.1.0"
description = "IBM HR Attrition Analytics: ETL, curated marts, model benchmarking, and a self-serve dashboard."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
